--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
+  margin-bottom: 5rem;
   padding: 2rem;
   text-align: center; 
 }
@@ -16,6 +17,13 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+fieldset {
+  border: 1px solid #ccc;
+  border-radius: 0.5em;
+  /* padding: 1em; */
+  margin: 1em 0;
 }
 
 @keyframes logo-spin {
