fix: Corrigir estilos de largura dos campos de formulário
Corrigir estilos de largura dos campos de formulário para usar a função "max" em vez de "min", garantindo que a largura seja sempre igual ou maior que o valor especificado.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,19 +31,19 @@ fieldset {
 /* Width */
 
 .width-25 {
-  width: min(100%, 25ch) !important;
+  width: max(100%, 25ch) !important;
 }
 
 .width-50 {
-  width: min(100%, 50ch) !important;
+  width: max(100%, 50ch) !important;
 }
 
 .width-75 {
-  width: min(100%, 75ch) !important;
+  width: max(100%, 75ch) !important;
 }
 
 .width-100 {
-  width: min(100%, 100ch) !important;
+  width: max(100%, 100ch) !important;
 }
 
 @keyframes logo-spin {
